corrected overflow errors

--- a/css/critical.less
+++ b/css/critical.less
@@ -131,6 +131,7 @@
         padding-top: 80/16em;
         position: relative;
         z-index: 1;
+        overflow-x: hidden;
       
         h1 {
             font-family: cormorant garamond;
