--- a/css/fees.less
+++ b/css/fees.less
@@ -134,6 +134,7 @@
       z-index: -2;
       img{
         height: 100%;
+        width: 100%;
       }
     }
 
